test(gates): gate 6 passes -- the real Cava jar boots inside a real server
This closes the "the MC-side code has never actually run" gap. The gradlew-produced
cava-0.1.0.jar (not a stub, not a probe) was loaded by a real Fabric server together
with fabric-api 0.96.11 and, deliberately, Lithium + ServerCore + VMP + FerriteCore
+ Carpet + TIS at the same time.

Observed on the server's own stdout:
  the native library is extracted from the jar by its documented resource path,
  written atomically under a sha256-derived name, loaded by System.load;
  layout self-check passes with java_sum == native_sum == 0x6149fd30;
  cava_open returns CAVA_OK with handle 4294967297;
  the Cava banner prints status OPEN, ABI 1/1, build_id, and cava_abi_touch() == 1,
  which proves native code really executed rather than merely being dlopen-ed;
  config/cava.json is written with defaults;
  Server thread: Done (7.102s) with no conflict against the six optimization mods.

Two things this gate does NOT close, both now stated in the doc:
- the canary chain is still 0/3 because all three subsystems are disabled by design in
  P0, so "probe the target method and check the counter moved" has never run for real;
  P1 must be the one to prove it once it injects findPathToAny;
- no golden trace has been captured yet, and determinism (same save twice) is unproven.